challenge16/mychart/templates/webdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdb
  namespace: nbacha
spec:
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
